增加了一些页面

--- a/mobile/action.html
+++ b/mobile/action.html
@@ -11,22 +11,21 @@
 
 <body>
 <div class="top_menu">
-	<a href="login.html">登录</a>&nbsp;|&nbsp;<a href="register.html">免费注册</a>
+	<a href="login.html">king</a>&nbsp;|&nbsp;<a href="register.html">退出</a>
 </div>
 <div class="logo">
 	<h1>
 		<a href="index.html">Air-WIFI</a>
 		<span class="nav">&gt</span>
-		<a href="index.html">欢迎您</a>
+		<a href="index.html">业务办理</a>
 	</h1>
 </div>
 <div class="body_split"></div>
 <div class="menu">
-    <a href="user_info.html">我的账户</a>
-    <a href="action.html">业务办理</a>
-	<a href="tv.html">影视专区</a>
-    <a href="manual.html">如何使用</a>
-    <a href="manual.html">常见问题</a>
+    <a href="tranc_packet.html">套餐变更(下月生效)</a>
+    <a href="tranc_traffic_addition.html">加油包(立即生效)</a>
+    <a href="tranc_wifi_charge.html">wifi币充值</a>
+	<a href="tranc_wifi_give.html">wifi币赠送</a>
 </div>
 <h2 class="board">公告栏</h2>
 <div class="content">
