--- a/mobile/user_info.html
+++ b/mobile/user_info.html
@@ -14,7 +14,7 @@
 <div class="top_menu">
 	欢迎您,&nbsp;<a href="user_info.html">king</a>&nbsp;<a href="logout.html">退出</a>
 </div>
-<div class="logo"><h1><a href="index.html">Air-WIFI</a><span class="nav">></span><a href="user_info.html">我的账户</a></h1></div>
+<div class="logo"><h1><a href="index.html">Air-WIFI</a><span class="nav">&gt</span><a href="user_info.html">我的账户</a></h1></div>
 <div class="body_split"></div>  
 <div class="content">
 <table class="table table-bordered table-striped">
@@ -24,8 +24,7 @@
     </colgroup>
     <thead>
         <tr>
-            <th>名称</th>
-            <th>明细</th>
+            <th colspan="2">账户信息总览</th>
         </tr>
     </thead>
     <tbody>
@@ -35,38 +34,13 @@
         </tr>
 
         <tr>
-            <td>当前套餐</td>
-            <td>20元1200MB体验套餐</td>
-        </tr>
-
-        <tr>
-            <td>套餐流量</td>
-            <td>1200.00MB</td>
-        </tr>
-
-        <tr>
-            <td>已用流量</td>
-            <td>450.25MB</td>
-        </tr>
-
-        <tr>
-            <td>剩余流量</td>
-            <td>749.75MB</td>
-        </tr>
-
-        <tr>
-            <td>套餐开始</td>
-            <td>2014-04-15 00:00:00</td>
-        </tr>
-
-        <tr>
-            <td>套餐截止</td>
-            <td>2014-05-15 23:59:59</td>
+            <td>本月消费</td>
+            <td>36.25wifi币</td>
         </tr>
 
         <tr>
             <td>账户余额</td>
-            <td>127 wifi币</td>
+            <td>127.25wifi币 <a href="http://www.air-wifi.cn/binding_detail.html">充值</a></td>
         </tr>
 
         <tr>
@@ -77,7 +51,69 @@
     </tbody>
 </table>
 
+
+<table class="table table-bordered table-striped">
+    <colgroup>
+        <col class="span2">
+        <col class="span4">
+    </colgroup>
+    <thead>
+        <tr>
+            <th colspan="2">流量信息</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>本月流量</td>
+            <td>980.00MB</td>
+        </tr>
+
+        <tr>
+            <td>套餐流量</td>
+            <td>500.00MB</td>
+        </tr>
+
+        <tr>
+            <td>加油包</td>
+            <td>80.00MB  <a href="traffic_detail.html">明细</a></td>
+        </tr>
+
+        <tr>
+            <td>其它赠送</td>
+            <td>100.00MB  <a href="traffic_detail.html">明细</a></td>
+        </tr>
+
+        <tr>
+            <td>上月剩余</td>
+            <td>100.00MB</td>
+        </tr>
+
+
+        <tr>
+            <td>已用流量</td>
+            <td>2651.00MB<br>
+                -350.70MB忙时<br>
+                -300.90MB闲时<br>
+                -2000.00MB内网<br>
+                <a href="traffic_detail.html">明细</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>计费流量</td>
+            <td>450.00MB</td>
+        </tr>
+
+        <tr>
+            <td>剩余流量</td>
+            <td>530.00MB</td>
+        </tr>
+
+    </tbody>
+</table>
+
 </div>
+
 
 <div class="footer">
     <p>Design By <a href="http://www.air-wifi.cn">Air-WIFI</a></p>
